--- a/app/views/ppsps/_modal_subcontractor.html.erb
+++ b/app/views/ppsps/_modal_subcontractor.html.erb
@@ -8,15 +8,7 @@
     </div>
     <div class="modal-body">
       <div class="cards-form">
-        <%= simple_form_for [@ppsp, @subcontractor], remote: true do |f| %>
-          <%= f.input :name %>
-          <%= f.input :address %>
-          <%= f.input :work %>
-          <%= f.input :responsible_name %>
-          <%= f.input :responsible_phone %>
-          <%= f.input :responsible_email %>
-          <%= f.submit %>
-        <% end %>
+        <%= render 'subcontractors/form' %>
       </div>
     </div>
   </div>
