--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,8 +1,11 @@
+$btn-add-size: 25px;
+
 .btn-blue {
   padding: 8px 16px;
   border-radius: 8px;
   color: white;
   background-color: $blue-light;
+  border: none;
   &:hover {
     background-color: $blue-dark;
     text-decoration: none;
@@ -22,21 +25,46 @@
   }
 }
 
-.btn-add {
-  background-color: $orange;
-  height: 20px;
-  width: 20px;
-  padding: 0px;
-  margin: 0px;
-  margin-left: 10px;
-  border-radius: 50%;
-  border: none;
-  font-size: 18px;
-  font-weight: 900;
-  &:hover {
-    background-color: $orange-dark;
+.btn-add{
+  cursor: pointer;
+  position: relative;
+  border: 0.5px solid $orange;
+  display: inline-block;
+  width: $btn-add-size;
+  height: $btn-add-size;
+  margin-left: $btn-add-size/2;
+  margin-right: $btn-add-size/5;
+  border-radius: $btn-add-size*0.5;
+  overflow: hidden;
+    &::before, &::after{
+    content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      transition: all 0.25s ease;
+      border-radius: $btn-add-size*0.5;
+    }
+    i{
+      position: relative;
+      color: rgb(59, 59, 59);
+      font-size: $btn-add-size/2;
+      margin-top: $btn-add-size/4;
+      transition: all 0.25s ease;
+    }
   }
-}
+
+  .btn-fill{
+    &::before{
+      transition-duration: 0.5s;
+      box-shadow: inset 0 0 0 1px $orange;
+    }
+    &:hover::before{
+      box-shadow: inset 0 0 0 $btn-add-size $orange;
+    }
+  }
+  
 
 .link {
   color: $orange;
