--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -1,5 +1,5 @@
 <%= simple_form_for @company do |f| %>
-  <%= f.input :name %>
-  <%= f.input :address %>
-  <%= f.submit %>
+  <%= f.input :name, label: 'Nom' %>
+  <%= f.input :address, label: 'Adresse' %>
+  <%= f.submit, class: 'btn-blue' %>
 <% end %>
