--- a/app/views/direccts/_form.html.erb
+++ b/app/views/direccts/_form.html.erb
@@ -1,6 +1,10 @@
 <%= simple_form_for @direcct do |f| %>
-  <%= f.input :name %>
-  <%= f.input :phone %>
-  <%= f.input :fax %>
-  <%= f.submit %>
+  <%= f.input :address, label: 'Adresse'%>
+  <%= f.input :phone, label: 'Téléphone' %>
+  <%= f.input :fax, label: 'Fax' %>
+  <% if params[:action] == 'new' %>
+    <%= f.submit 'Créer un DIRECCT', class: 'btn-blue' %>
+  <% else %>
+    <%= f.submit 'Modifier ce DIRECCT', class: 'btn-blue' %>
+  <% end %>
 <% end %>
