--- a/app/views/sos_hands/_form.html.erb
+++ b/app/views/sos_hands/_form.html.erb
@@ -1,6 +1,10 @@
 <%= simple_form_for @sos_hand do |f| %>
-  <%= f.input :name %>
-  <%= f.input :address %>
-  <%= f.input :phone %>
-  <%= f.submit %>
+  <%= f.input :name, label: 'Nom' %>
+  <%= f.input :address, label: 'Adresse' %>
+  <%= f.input :phone, label: 'Téléphone' %>
+  <% if params[:action] == 'new' %>
+    <%= f.submit 'Créer un centre', class: 'btn-blue' %>
+  <% else %>
+    <%= f.submit 'Modifier ce centre', class: 'btn-blue' %>
+  <% end %>
 <% end %>
