--- a/app/views/team_managers/_form.html.erb
+++ b/app/views/team_managers/_form.html.erb
@@ -2,5 +2,9 @@
   <%= f.input :name, label: "Nom" %>
   <%= f.input :phone, label: "Téléphone"  %>
   <%= f.input :email, label: "Email"  %>
-  <%= f.submit %>
+  <% if params[:action] == 'new' %>
+    <%= f.submit "Créer un chef d'équipe", class: 'btn-blue' %>
+  <% else %>
+    <%= f.submit "Modifier ce chef d'équipe", class: 'btn-blue' %>
+  <% end %>
 <% end %>
