Add front for informations supplementaires

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,13 @@
   display: none;
 }
 
+h1 {
+  font-size: 28px;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  text-align: center;
+}
+
 body {
   background-color: $gray-light;
 }
