--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -56,3 +56,40 @@
     text-decoration: none;
   }
 }
+
+.card-info {
+  box-shadow:  2px 3px 10px 2px $blue-dark-shadow;
+  padding: 8px;
+  border-radius: 8px;
+  .card-info-title{
+    font-size: 20px;
+    font-weight: 500;
+  }
+  .card-info-selected {
+    display: flex;
+  }
+  .card-info-delete a {
+    float: right;
+    border: none;
+    color: $blue-dark;
+    margin-left: 6px;
+    &:hover{
+      color: black;
+      text-decoration: none;
+    }
+  }
+}
+
+.card-form {
+  padding: 4px 8px;
+  border-radius: 4px;
+  border: 1px solid $blue-dark;
+  margin: 4px;
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.active {
+  background-color: $blue-dark-shadow;
+}
