--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -9,7 +9,9 @@ $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
 $orange: #ff7e67;
+$orange-shadow: #ff7e6780;
 $orange-dark: #e66d58;
 $blue-dark: #006a71;
+$blue-dark-shadow: #00697177;
 $blue-light: #68b0ab;
 $gray-light: #ecf4f3;
