--- a/app/views/anti_poisons/_form_field_anti_poison.html.erb
+++ b/app/views/anti_poisons/_form_field_anti_poison.html.erb
@@ -1,4 +1,11 @@
-<label class="select required" for="ppsp_anti_poison_id">Centre anti-poison <abbr title="required">*</abbr></label>
+<div class="d-flex align-items-start">
+  <label class="select required" for="ppsp_anti_poison_id">Centre anti-poison <abbr title="required">*</abbr></label>
+  <% if policy(AntiPoison).new? %>
+    <button type="button" class="btn-add btn-fill" data-toggle="modal" data-target="#ModalAntiPoison">
+      <i class="fas fa-plus"></i>
+    </button>
+  <% end %>
+</div>
 <select class="form-control select required" name="ppsp[anti_poison_id]" id="ppsp_anti_poison_id">
   <option value=""></option>
   <% @anti_poisons.each do |instance| %>
