--- a/app/views/hospitals/_form.html.erb
+++ b/app/views/hospitals/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @hospital do |f| %>
+<%= simple_form_for @hospital, remote: true do |f| %>
   <%= f.input :name, label: 'Nom' %>
   <%= f.input :address, label: 'Adresse' %>
   <%= f.input :phone, label: 'Téléphone' %>
