--- a/app/views/moas/_form.html.erb
+++ b/app/views/moas/_form.html.erb
@@ -1,12 +1,12 @@
-<%= simple_form_for @moa do |f| %>
+<%= simple_form_for @moa, remote: true do |f| %>
   <%= f.input :name, label: 'Nom' %>
   <%= f.input :address, label: 'Adresse' %>
   <%= f.input :representative, label: 'Représentant' %>
   <%= f.input :phone, label: 'Téléphone' %>
   <%= f.input :email, label: 'Email' %>
   <% if params[:action] == 'new' %>
-    <%= f.submit 'Créer un MOA', class: 'btn-blue' %>
+    <%= f.submit 'Créer un MOA', class: 'btn-blue', id: "MoaBtn" %>
   <% else %>
-    <%= f.submit 'Modifier ce MOA', class: 'btn-blue' %>
+    <%= f.submit 'Modifier ce MOA', class: 'btn-blue', id: "MoaBtn" %>
   <% end %>
 <% end %>
