--- a/app/views/pension_insurances/_form.html.erb
+++ b/app/views/pension_insurances/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @pension_insurance do |f| %>
+<%= simple_form_for @pension_insurance, remote: true do |f| %>
   <%= f.input :address, label: 'Adresse' %>
   <%= f.input :phone, label: 'Téléphone' %>
   <%= f.input :fax, label: 'Fax' %>
