--- a/app/views/regional_committees/_form.html.erb
+++ b/app/views/regional_committees/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @regional_committee do |f| %>
+<%= simple_form_for @regional_committee, remote: true do |f| %>
   <%= f.input :name, label: 'Nom' %>
   <%= f.input :address, label: 'Adresse'%>
   <%= f.input :phone, label: 'Téléphone' %>
