--- a/app/views/team_managers/_form.html.erb
+++ b/app/views/team_managers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @team_manager do |f| %>
+<%= simple_form_for @team_manager, remote: true do |f| %>
   <%= f.input :name, label: "Nom" %>
   <%= f.input :phone, label: "Téléphone"  %>
   <%= f.input :email, label: "Email"  %>
