--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,29 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container-home">
+  <h1>Créer votre Plan Particulier de Sécurité et de Protection de la Santé en toute simplicité avec</h1>
+  <%= image_tag('logo-ppsp.png') %>
+  <div class="row align-items-center">
+    <div class="col-6">
+      <%= image_tag('logo-ppsp.png', width: 400, height: 300) %>
+    </div>
+    <div class="col-6">
+      <h1>Créér des PPSPS au format PDF en toute simplicité</h1>
+    </div>
+  </div>
+  <div class="row align-items-center">
+    <div class="col-6">
+      <h1>Possibilité d'accéder à tous les documents créés par son entreprise avec un système de recherche rapide</h1>
+    </div>
+    <div class="col-6">
+      <%= image_tag('logo-ppsp.png', width: 400, height: 300) %>
+    </div>
+  </div>
+  <div class="row align-items-center">
+    <div class="col-6">
+      <%= image_tag('logo-ppsp.png', width: 400, height: 300) %>
+    </div>
+    <div class="col-6">
+      <h1>Une base de données modifiable selon vos besoins</h1>
+    </div>
+  </div>
+</div>
+
