--- a/app/views/ppsps/index.html.erb
+++ b/app/views/ppsps/index.html.erb
@@ -4,6 +4,10 @@
       <%= link_to "Modifier les bases de données", database_path, class: 'btn-orange' %>
     <% end %>
   <h1 class='ppsp-title'><%= "Les PPSP de #{current_user.company.name}" %></h1>
+  <%= form_tag ppsps_path, method: :get do %>
+    <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Chercher une référence" %>
+    <%= submit_tag "Chercher", class: "btn-blue" %>
+  <% end %>
   <div class="container-ppsp">
     <% @ppsps.each do |ppsp| %>
       <%= link_to ppsp_path(ppsp, format: :pdf), class: 'without-decoration', target: '_blank' do %>
