--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
   <%= image_tag('logo-ppsp.png') %>
   <div class="row align-items-center">
     <div class="col-6">
-      <%= image_tag('logo-ppsp.png', width: 400, height: 300) %>
+      <%= image_tag('home_PDF.png', width: 300, height: 500) %>
     </div>
     <div class="col-6">
       <h1>Créér des PPSPS au format PDF en toute simplicité</h1>
@@ -14,7 +14,7 @@
       <h1>Possibilité d'accéder à tous les documents créés par son entreprise avec un système de recherche rapide</h1>
     </div>
     <div class="col-6">
-      <%= image_tag('logo-ppsp.png', width: 400, height: 300) %>
+      <%= image_tag('home_PDF.png', width: 400, height: 300) %>
     </div>
   </div>
   <div class="row align-items-center">
