Ok pour l'envoi du mail de récupération de mot de passe'

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-ppsp">
-  <%= link_to ppsps_path, class:"icon-home" do %>
+  <%= link_to ppsps_path, class:"icon-home", data: { turbolinks: false } do %>
     <%= image_tag('logo-ppsp.png', width: 80, height: 80) %>
   <% end %>
 
