--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,3 @@
-<p><%= t('.greeting', recipient: @resource.email) %></p>
+<p>Bonjour <%= @resource.first_name %>!</p>
 
-<p><%= t('.message') %></p>
+<p>Nous vous contactons pour vous vous siganler que votre mail a bien été modifié.</p>
