--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,8 @@
-<p><%= t('.greeting', recipient: @resource.email) %></p>
+<% require 'devise/version' %>
+<p><%= t('.greeting', :recipient => @resource.email, :default => "Hello #{@resource.email}!") %></p>
 
-<p><%= t('.message') %></p>
+<p><%= t('.message', :default => "Your account has been locked due to an excessive amount of unsuccessful sign in attempts.") %></p>
 
-<p><%= t('.instruction') %></p>
+<p><%= t('.instruction', :default => "Click the link below to unlock your account:") %></p>
 
-<p><%= link_to t('.action'), unlock_url(@resource, unlock_token: @token) %></p>
+<p><%= link_to t('.action', :default => "Unlock my account"), unlock_url(@resource, :unlock_token => (Devise::VERSION.start_with?('3.') ? @token :@resource.unlock_token)) %></p>
